[package]
name = "eth-ton-abi-converter"
version = "0.1.2"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
ethabi = "15.0"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3.55"
num-bigint = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"

ed25519-dalek = {git = "https://github.com/broxus/ed25519-dalek.git"}

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
