[package]
name = "eth-ton-abi-converter"
version = "0.2.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
members = ["bindings"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
ethabi = "16.0"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[profile.release]
opt-level = "s"
