[package]
name = "eth-ton-abi-converter"
version = "0.5.4"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"

[workspace]
members = ["bindings"]

[dependencies]
anyhow = "1.0"
ethabi = "16.0"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

borsh = "0.10"
either = "1.6.1"

[dev-dependencies]
paste = "1.0"

[profile.release]
opt-level = "s"

[features]
web = ["ton_abi/web"]
