[package]
name = "bindings"
version = "0.3.2"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
name = "eth_ton_abi_converter"
crate-type = ["lib", "cdylib"]

[dependencies]
base64 = "0.13"
ethabi = "16.0.0"
getrandom = { version = "0.2.5", features = ["js"] }
hex = "0.4"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"

ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }

eth-ton-abi-converter = { path = "..", features = ["web"] }
